# algorithms

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.dev.txt  setup.cfg
src/algorithms/: utils.py
src/algorithms/algebra/: factorization.py  lattice.py  lll.py  ntt.py  number_field_sieve.py
src/algorithms/artificial_intelligence/: baesian_inference.py  decision_tree.py
src/algorithms/linear_algebra/: row_reduce.py
src/algorithms/number_theory/: modular_arithmetic.py  primes.py
tests/algorithms/: constants.py
tests/algorithms/algebra/: test_factorization.py  test_lll.py  test_ntt.py  test_number_field_sieve.py
tests/algorithms/linear_algebra/: test_row_reduce.py
tests/algorithms/number_theory/: test_modular_arithmetic.py  test_primes.py
