[metadata]
name = algorithms-amund211
version = 0.1.0
author = Amund Eggen Svandal
author_email = aesvandal@gmail.com
description = Random algorithms for different stuff
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Amund211/algorithms
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    sympy

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,.mypy_cache,__pycache__,build,dist,venv

[coverage:run]
source=src/algorithms
command_line=-m pytest

[coverage:report]
show_missing=true
skip_covered=true
